Stop making Longs with a constructor
Six places made a Long by calling its constructor, which allocates one
where the cached value would have done. They pass the number itself now,
and the boxing that follows is the valueOf they were told to call.

A seventh was not reported and is not the same: it made a Long out of
the text of a table cell, which is the constructor that parses rather
than the one that boxes. That one is Long.valueOf of the String, which
parses as it did and fails on bad text as it did.

These constructors have been deprecated since Java 9 and are marked for
removal, so they were on their way to failing the build rather than
merely being remarked upon. There is no longer a constructor call for
any boxed type anywhere in the repository.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>